trunk/Archive2/a4/60d3daeaffbd43/output
main.cpp:5:48: error: expected initializer before 'mytype'
 typedef bool (f)(const float &, const float &) mytype;
                                                ^
