trunk/Archive2/a4/60d3daeaffbd43/main.cpp
void myfunc(bool (f)(const float &, const float &) )
{
    f(1,2);
}
typedef bool (f)(const float &, const float &) mytype;
